# gevulot

./: .gitignore  Cargo.toml  Containerfile  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  README.md  UNIKERNEL.md  flake.nix  gevulot-overview.md  podman-compose.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md  localkey.pki
crates/cli/src/: file.rs  keyfile.rs  lib.rs  main.rs  server.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/node/: Cargo.toml  README.md  build.rs  podman-compose.yml
crates/node/.sqlx/: query-151f420a22124e7c5f7d6a868f06c71e6f6805787aae1dea47cb248d07689498.json  query-95e69237bf0e78c97c375ebb7eb79b7099e33764c17bac59d9d283df5ff23863.json  query-abe5beb138e0d1eec02fd151f2bff2a0b655fb550ced3e93dc1ce4b4ba5284be.json
crates/node/migrations/: 20231009111859_programs-table.sql  20231009111925_tasks-table.sql  20231128120351_transactions-table.sql  20231128120829_assets-table.sql  20240121151959_acl_whitelist.sql  20240202122917_drop_unique_proof_parent_prover_constraint.sql  20240212064646_add-program-resource-requirements.sql  20240215174342_add_txfile_and_checksum.sql  20240221184329_remove_asset_table.sql  20240222200513_remove_task_table.sql  20240311123204_add-transaction-timestamp.sql  20240318140915_add-dashboard-notify-trigger-to-transaction.sql
crates/node/src/: cli.rs  config.rs  lib.rs  main.rs
crates/node/src/acl/: mod.rs
crates/node/src/asset_manager/: mod.rs
crates/node/src/event_loop/: download_manager.rs  mod.rs
crates/node/src/mempool/: event.rs  mod.rs  preexec.rs  validate.rs
crates/node/src/mempool/txvalidation/: download_manager.rs  mod.rs
crates/node/src/metrics/: mod.rs
crates/node/src/nanos/: mod.rs  volume.rs
crates/node/src/networking/: download_manager.rs  mod.rs  noise.rs  p2p.rs
crates/node/src/networking/p2p/: mod.rs  noise.rs  pea2pea.rs  protocol.rs
crates/node/src/networking/p2p/protocol/: internal.rs  mod.rs  v0.rs  v1.rs
crates/node/src/rest_api/: mod.rs
crates/node/src/rpc/: mod.rs
crates/node/src/rpc_client/: mod.rs
crates/node/src/rpc_server/: mod.rs
crates/node/src/scheduler/: mod.rs  program_manager.rs  resource_manager.rs
crates/node/src/storage/: file.rs  mod.rs
crates/node/src/storage/database/: mod.rs  postgres.rs
crates/node/src/storage/database/entity/: mod.rs  payload.rs  public_key.rs  transaction.rs
crates/node/src/txvalidation/: acl.rs  download_manager.rs  event.rs  mod.rs
crates/node/src/types/: account.rs  deployment.rs  file.rs  hash.rs  key_capsule.rs  mod.rs  program.rs  rpc.rs  rpc_types.rs  signature.rs  task.rs  transaction.rs
crates/node/src/vmm/: mod.rs  qemu.rs  vm_server.rs
crates/node/src/watchdog/: mod.rs
crates/node/src/workflow/: mod.rs
crates/nodectl/: Cargo.toml
crates/nodectl/src/: main.rs
crates/shim/: Cargo.toml  build.rs
crates/shim-ffi/: Cargo.toml
crates/shim-ffi/src/: lib.rs
crates/shim/proto/: vm_service.proto
crates/shim/src/: lib.rs
crates/tests/e2e-tests/: Cargo.toml
crates/tests/e2e-tests/manifest/: prover.json  verifier.json
crates/tests/e2e-tests/src/: main.rs  server.rs
crates/tests/test-programs/: Cargo.toml
crates/tests/test-programs/src/: prover.rs  verifier.rs
nargo/hello_world/etc/: ld.so.cache  nsswitch.conf
nargo/hello_world/lib/x86_64-linux-gnu/glibc-hwcaps/x86-64-v2/: libdl.so.2  libgcc_s.so.1  libm.so.6  libpthread.so.0
nargo/hello_world/proc/self/: cgroup
nargo/hello_world/scripts/: local.json  ls.json  tree.json
prover/: .gitignore  Cargo.toml  window-proof.json  winning-proof.json
prover/circom/: README.md  scheherazade.circom  sudoku.circom  sudoku_inputs.json  sudoku_wrong.json
prover/circom/ed25519/: inputs.json
prover/deployments/: README.md  window-post-inputs.json  winning-post-inputs.json
prover/gev-core/: Cargo.toml
prover/gev-core/src/: lib.rs
prover/groth16/: Cargo.toml
prover/groth16/benches/: bench.rs
prover/groth16/src/: api.rs  constraints.rs  data_structures.rs  generator.rs  lib.rs  prover.rs  r1cs_to_qap.rs  verifier.rs
prover/marlin/: .gitignore  Cargo.toml
prover/marlin/src/: api.rs  data_structures.rs  lib.rs  rng.rs  test.rs
prover/marlin/src/ahp/: constraint_systems.rs  mod.rs  prover.rs  verifier.rs
prover/rust-fil-proofs/fil-proofs-tooling/scripts/: benchy.sh  run-remote.sh  with-dots.sh
prover/rust-fil-proofs/filecoin-proofs/: Cargo.toml
prover/rust-fil-proofs/filecoin-proofs/src/api/: update.rs  util.rs  window_post.rs  winning_post.rs
prover/rust-fil-proofs/filecoin-proofs/src/types/: post_config.rs  private_replica_info.rs  sector_size.rs
prover/rust-fil-proofs/scripts/: bench-parser.sh
prover/rust-fil-proofs/storage-proofs-core/src/: api_version.rs  compound_proof.rs
prover/rust-fil-proofs/storage-proofs-core/src/gadgets/: por.rs
prover/rust-fil-proofs/storage-proofs-core/src/merkle/: builders.rs
prover/rust-fil-proofs/storage-proofs-porep/src/stacked/vanilla/: proof.rs
prover/rust-fil-proofs/storage-proofs-post/src/fallback/: vanilla.rs
prover/rust-fil-proofs/storage-proofs-update/: Cargo.toml
prover/scripts/: download-proof-parameter-files-512M.sh  ed25519-groth-proof.json  ed25519-groth-verify.json  sudoku-marlin-proof.json  sudoku-marlin-verify.json
prover/src/: gev_rust.rs  main.rs
prover/starkware/: fibo-prover.json  fibo-verify.json  fibonacci_memory.json  fibonacci_private_input.json  fibonacci_public_input.json  fibonacci_trace.json
prover/test-data/: empty_inputs.json  sudoku.json  sudoku.r1cs  sudoku.wtns
