[package]
name = "gevulot-prover"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [
    "curve",
] }
ark-serialize = { version = "^0.3.0", default-features = false, features = [
    "derive",
] }
clap = { version = "4.0.29", features = ["derive"] }
gev-core = { path = "gev-core" }
thiserror = "1.0.44"
ark-marlin = { path = "marlin" }
ark-groth16 = { path = "groth16" }
ark-bn254 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
filecoin-proofs = { path = "rust-fil-proofs/filecoin-proofs" }

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
