[package]
name = "gevulot-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
blake3 = { version = "1.5", features = [ "mmap" ] }
clap = { version = "4.0.29", features = ["derive"] }
clap-num = "1"
futures-util = { version = "0.3", default-features = false }
gevulot-node = { path = "../node", default-features = false }
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
indicatif = "0.17.7"
libsecp256k1 = "0.7"
log = "0.4.20"
rand = { version = "0.8", features = [ "std_rng" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
sha3 = "0.10"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = [ "full" ] }
tokio-util = "0.7"
url = "2.5.0"
