[package]
name = "gevulot-node"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "gevulot"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.74"
bincode = "1.3"
blake3 = "1.5"
bytes = "1.5"
clap = { version = "4", features = ["derive", "env", "string"] }
console-subscriber = "0.2"
ecies = {version = "0.2", default-features = false, features = ["pure"]}
eyre = "0.6.8"
futures-util = "0.3"
hex = "0.4"
home = "0.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
jsonrpsee = { version = "0.20", features = [ "client", "server" ] }
libsecp256k1 = "0.7"
num-bigint = { version = "0.4", features = [ "serde" ] }
num-traits = "0.2"
parking_lot = "0.12"
pea2pea = "0.48"
prost = "0.11"
qapi = { version = "0.14", features = [ "qmp", "async-tokio-net" ]}
rand = { version = "0.8", features = [ "std_rng" ] }
reqwest = { version = "0.11", features = [ "stream" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.9"
sha3 = "0.10"
snow = "0.9"
sqlx = { version = "0.7", features = ["postgres", "migrate", "runtime-tokio", "rust_decimal", "time", "tls-rustls", "uuid"] }
thiserror = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tokio-vsock = { version = "0.4.0", features = ["tonic-conn"] }
tonic = "0.8.3"
tower = "0.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vsock = "0.3.0"
uuid = { version = "1", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ] }

[build-dependencies]
tonic-build = "0.8"
vergen = { version = "8.3.0", features = [ "build", "git", "git2" ] }
