[package]
name = "gev-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
thiserror = "1.0.44"

[lib]
crate-type = ["cdylib", "rlib"]

